# mt3dms

./: README.md  meson.build  pixi.toml
.github/workflows/: ci.yml
src/: filespec.inc  meson.build  mt_dsp5.for  mt_fmi5.for  mt_gcg5.for  mt_hss5.for  mt_rct5.for  mt_ssm5.for  mt_tob5.for
